<resources>
    <string name="app_name">VHSMonitoring</string>
    <string name="vhs_monitoring">VHS \nMonitoring</string>
    <string name="monitoring_and_approval"><![CDATA[Monitoring & Approval]]></string>
    <string name="automatisasi_monitoring_dan_approval_vendor_held_stock_vhs">Automatisasi monitoring dan approval \nVendor Held Stock (VHS)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="overview"><u>OVERVIEW</u></string>
    <string name="masuk">Masuk</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="ingat_saya">Ingat saya</string>
    <string name="sandi">Kata Sandi</string>
    <string name="nomor_id">Nomor ID</string>
    <string name="headingPreviewLoginImage">Kemudahan Monitoring</string>
    <string name="descriptionsPreviewLoginImage">Monitoring pembelian stok lebih mudah dalam genggaman anda.</string>

    <string name="splashScreen_text1"><![CDATA[Monitoring & Approval]]></string>
    <string name="splashScreen_text2">Automatisasi monitoring dan approval Vendor Held Stock (VHS)</string>
    <string name="default_approval_status_text">Approval Status</string>
    <string name="default_calendar_text">DD/MM/YYYY</string>
    <string name="current_stock">Current Stock</string>
    <string name="default_current_stocks">XXX kL</string>
    <string name="sold">Sold</string>
    <string name="default_industry_name">Industry Name</string>
    <string name="default_industry_addresses">City Name, Province, Postal Code</string>
    <string name="default_stock_type">Stok: Solar</string>
    <string name="approval_status">Approval Status</string>
    <string name="descriptions">Descriptions</string>
    <string name="input_button">INPUT</string>
    <string name="history">History</string>
    <string name="daily_pickup">Daily Pickup</string>
    <string name="arrived_stock">Arrived Stock</string>
    <string name="stock_opname">Stock Opname</string>
    <string name="default_date_text">Date</string>
    <string name="default_text_in_litre">XX kL</string>
    <string name="approval_status_details">Approval Status</string>
    <string name="default_amount">XXX kL</string>
    <string name="default_id">data_id</string>
    <string name="no_activity">No Activity</string>
    <string name="stock_opname_type">Stock opname type</string>
    <string name="approval_needed_customer">Approval Needed Customer</string>
    <string name="approval_needed_pertamina">Approval Needed Pertamina</string>
    <string name="approved">Approved</string>
    <string name="daily_pickup_type">DAILY_PICKUP</string>
    <string name="data_to_encrypt">data to encrypt</string>
    <string name="data_encrypted">data encrypted</string>
    <string name="encrypt">encrypt</string>
    <string name="data_decrypted">data decrypted</string>
    <string name="add_user_handler">ADD USER HANDLER</string>
    <string name="handler_id">handler id</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="icons">icons</string>
    <string name="password">password</string>
    <string name="role">role</string>
    <string name="add_users">Add Users</string>
    <string name="handler">handler</string>
    <string name="customer">customer</string>
    <string name="pertamina">pertamina</string>
    <string name="add_stock">Add Stock</string>
    <string name="stock_type">stock type</string>
    <string name="buyer">buyer</string>
    <string name="stock_handler">stock handler</string>
    <string name="add_stock_data">Add stock data</string>
    <string name="code">code</string>
    <string name="add_claim_contract">add claim contract</string>
    <string name="amount">amount</string>
    <string name="buyer_id">buyer id</string>
    <string name="manager_id">manager id</string>
    <string name="price">price</string>
    <string name="tank_status">tank status</string>
    <string name="tank_rest">tank rest</string>
    <string name="add_customer_address">Add Customer Address</string>
    <string name="add_address">add address</string>
    <string name="postal_code">postal code</string>
    <string name="province">province</string>
    <string name="city">city</string>
    <string name="customer_id">customer id</string>
    <string name="affiliated_user_2">affiliated user 2</string>
    <string name="affiliated_user_1">affiliated user 1</string>
    <string name="stock_id">stock id</string>
    <string name="affiliated_customer">affiliated customer</string>
    <string name="affiliated_pertamina">affiliated pertamina</string>
    <string name="affiliated_handler">affiliated handler</string>
    <string name="default_title">default title</string>
    <string name="default_status">default status</string>
    <string name="fresh_stock">Fresh Stock</string>
    <string name="input">INPUT</string>
    <string name="approval">APPROVAL</string>
    <string name="tank_capacity">1000kl</string>
    <string name="delivered_amount">delivered amount</string>
    <string name="losses_claim">losses claim</string>
    <string name="default_delivered_amount">1000kL</string>
    <string name="claim">1000kL</string>
    <string name="approval_needed">Approval Needed</string>
    <string name="nothing_to_do">Nothing to do</string>
    <string name="today">TODAY</string>
    <string name="default_time">00:00</string>
    <string name="customer_name">customer name</string>
    <string name="default_date">dd/mm/yyyy</string>
    <string name="descriptions_messages">descriptions messages</string>
    <string name="default_value">default value</string>
    <string name="approval_default">Approval</string>
    <string name="default_company_name">PT. Shell Indonesia</string>
</resources>