<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- add users data-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/add_users"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/addUserCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/code"/>

            <EditText
                android:id="@+id/addUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/password"/>

            <EditText
                android:id="@+id/addUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/addUserIcons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/icons"/>

            <EditText
                android:id="@+id/addUserPertaminaManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/affiliated_pertamina"/>

            <EditText
                android:id="@+id/addUserAffiliatedCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/affiliated_customer"/>

            <EditText
                android:id="@+id/addAffiliatedHandler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/affiliated_handler"/>

            <EditText
                android:id="@+id/addAffiliatedStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/stock_id"/>

            <RadioGroup
                android:id="@+id/addRoleRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/addUserHandler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/handler"/>

                <RadioButton
                    android:id="@+id/addUserPertamina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/pertamina"/>

                <RadioButton
                    android:id="@+id/addUserCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/customer"/>
            </RadioGroup>

            <Button
                android:id="@+id/addUsersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_user_handler"/>

            <!-- add stock data -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_stock"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/addStockType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/stock_type"/>

            <EditText
                android:id="@+id/addStockBuyerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/buyer_id"/>

            <EditText
                android:id="@+id/addStockHandlerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/handler_id"/>

            <EditText
                android:id="@+id/addStockManagerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/manager_id"/>

            <EditText
                android:id="@+id/addStockPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/price"/>

            <EditText
                android:id="@+id/addStockTankStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/tank_status"/>

            <EditText
                android:id="@+id/addStockPriceTankRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/tank_rest"/>

            <Button
                android:id="@+id/addStockDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_stock_data"/>

            <!-- add claim contract-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_claim_contract"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/addClaimAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/amount"/>

            <EditText
                android:id="@+id/addClaimContractHandler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/handler_id"/>

            <Button
                android:id="@+id/addClaimContractButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_stock_data"/>

            <!-- add customer address -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_customer_address"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/addAddressOwnerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/customer_id"/>

            <EditText
                android:id="@+id/addCityAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/city"/>

            <EditText
                android:id="@+id/addProvinceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/province"/>

            <EditText
                android:id="@+id/addPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/postal_code"/>

            <Button
                android:id="@+id/addAddressButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_address"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>