<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dataInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:hint="@string/data_to_encrypt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/data_encrypted"/>

    <TextView
        android:id="@+id/dataEncrypted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/data_decrypted"/>

    <TextView
        android:id="@+id/dataDecrypted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/encryptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"/>

</LinearLayout>